# FCScoreDocs

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.md
docs/downgrades/: IAC_dg_summaries.md  IMAC_dg_summaries.md  f3a_dg_summaries.md  index.md
docs/instructions/: index.md
docs/instructions/competitions/: cheat_sheet.md  index.md
docs/instructions/database/: index.md
docs/instructions/manoeuvre_analysis/: index.md
docs/instructions/scoring/: box_definition.md  index.md  load_flight_data.md  manoeuvre_segmentation.md
docs/instructions/users/: index.md
docs/process/: index.md  inter.md  intra.md  segmentation.md  sequence_definition.md
fcscoredocs.egg-info/: PKG-INFO  SOURCES.txt
